k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /front
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - path: /back
        pathType: Prefix
        backend:
          service:
            name: bff-service
            port:
              number: 5000
